--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,8 @@ dependencies {
 
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation 'com.squareup.retrofit2:converter-simplexml:2.1.0'
 
     def fastadapter_version = "5.2.3"
     implementation "com.mikepenz:fastadapter:$fastadapter_version"
